--- a/public/style.css
+++ b/public/style.css
@@ -10,20 +10,24 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: #141111;
+    background: #2d2d2d;
     font-family: 'Roboto', sans-serif;
 }
 section.chat__section {
-    width: 800px;
-    max-width: 90%;
-    background: #3c3b3b;
-    box-shadow: 0 10px 15px -3px rgba(208, 208, 208, 0.1), 0 4px 6px -2px rgba(138, 137, 137, 0.05);
+    width:800px;
+    max-width: 100%;
+    background: #6b6a6a;
+    border-radius: 30px;
+    box-shadow: 0 10px 15px -3px rgba(62, 58, 58, 0.1), 0 4px 6px -2px rgba(138, 137, 137, 0.05);
 }
 .brand {
     padding: 20px;
+    border-top-right-radius: 30px;
+    border-top-left-radius: 30px ;
     background: #f1f1f1;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 .brand h1 {
     text-transform: uppercase;
@@ -46,6 +50,7 @@ textarea {
     font-size: 16px;
     outline: none;
     background: #FBFBFB;
+    border-radius: 30px;
     resize: none;
 }
 
